# sailpolar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TASKS.md  pyproject.toml
docs/: api.rst  examples.rst  index.rst  installation.rst  usage.rst
notebooks/: rot_analysis.ipynb
scripts/: analyze_nmea.py
src/sailpolar/: __init__.py
src/sailpolar/analysis/: current_analyzer.py  instrument_analyzer.py  rot_analyzer.py  rot_visualizer.py
src/sailpolar/core/: models.py  polar_analyzer.py
src/sailpolar/parser/: nmea0183.py
src/sailpolar/polar/: __init__.py  base_polar.py  max_speed_polar.py
tests/: test_max_speed_polar.py  test_nmea0183.py  test_rot_analyzer.py
